kubernetes/gateway-api/traefik/gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: traefik
  labels:
    app.kubernetes.io/part-of: flipper
    app.kubernetes.io/managed-by: kustomize
spec:
  # controllerName must match the value Traefik watches (set in its Helm values)
  controllerName: traefik.io/gateway-controller
